# clientServer

./: .gitignore  README.md
Client/: CMakeLists.txt
Client/Client/: CMakeLists.txt
Client/Client/include/: chat-message.h  client.h
Client/Client/src/: client.cpp  main.cpp
Server/Server/: CMakeLists.txt
Server/Server/include/: chat-message.h  tcp-server.h
Server/Server/src/: tcp-server.cpp
